test/org/midica/testfiles/failing/pattern-stacktrace-2.midica
INCLUDE inc/instruments.midica
INCLUDE inc/pat-st-incl.midica

{
	0  c/d  pat_out  q=2, m
}
